# buildsystem_example

./: .bazelrc  CMakeLists.txt  WORKSPACE
base/crypto/: BUILD  crypto_test.cpp  md5.cpp  md5.h
cloudservice/: CMakeLists.txt  cloudservice.cpp
cloudservice/test/: fewfe.cpp
crossplatform/: BUILD  crossplatform.bzl
downloadservice/: BUILD  main.cpp
external_proj/: CMakeLists.txt  externalfunc.cpp  externalfunc.h
helloworld/: BUILD  helloworldmain.cpp
http/: BUILD  CMakeLists.txt  http.cpp  http.h
inputconfig/: CMakeLists.txt  inputconfig.h
inputcore/: CMakeLists.txt  inputcore.cpp  inputcore.h
ipc/: BUILD  CMakeLists.txt  ipc.cpp  ipc.h
toolchain/: BUILD  cc_toolchain_config.bzl
